<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/locationFind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            android:drawSelectorOnTop="true"
            android:entries="@array/city"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/Lat"/>
    
    <Button
            android:id="@+id/locationFind"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@android:drawable/ic_menu_mylocation"
            android:padding="8dp"
            android:text="@string/location"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    
    
    <ImageView
            android:id="@+id/iv_sunrise"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="Sunrise"
            android:src="@drawable/ic_sunrise"
            app:layout_constraintBottom_toTopOf="@+id/tv_sunrise_time"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/surjodoy"
    />
    
    <TextView
            android:id="@+id/tv_sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="04:00 AM"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_sunrise"
            tools:visibility="visible" app:layout_constraintTop_toBottomOf="@+id/iv_sunrise"
            app:layout_constraintEnd_toStartOf="@+id/tv_sunset_time" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.041"/>
    <ImageView
            android:id="@+id/iv_sunset"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="36dp"
            android:contentDescription="Sunset"
            android:src="@drawable/ic_sunset"
            app:layout_constraintBottom_toTopOf="@+id/tv_sunset_time"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/iv_sunrise"
            app:layout_constraintTop_toTopOf="@+id/iv_sunrise" app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/tv_sunset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="06:00 PM"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_sunset"
            tools:visibility="visible" app:layout_constraintStart_toStartOf="@+id/iv_sunset"
            app:layout_constraintTop_toTopOf="@+id/tv_sunrise_time" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="Latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Lat"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintBottom_toTopOf="@+id/CityView" app:layout_constraintStart_toStartOf="@+id/spinner"/>
    <TextView
            android:text="Dhaka, BD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/CityView"
            app:layout_constraintTop_toBottomOf="@+id/Lat"
            app:layout_constraintBottom_toTopOf="@+id/ViewWeather" app:layout_constraintStart_toStartOf="@+id/Lat"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:text="Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Lon"
            app:layout_constraintBottom_toBottomOf="@+id/latVAL"
            app:layout_constraintTop_toTopOf="@+id/latVAL"
            app:layout_constraintEnd_toStartOf="@+id/lonVAL" android:layout_marginEnd="24dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ViewWeather" android:text="VIEW WEATHER"
            android:textAlignment="center" android:textSize="16sp"
            android:background="#6900FF" android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/CityView"
            app:layout_constraintBottom_toTopOf="@+id/datetime"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/sampleLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/latVAL"
            app:layout_constraintStart_toEndOf="@+id/Lat" app:layout_constraintBottom_toBottomOf="@+id/Lat"
            app:layout_constraintTop_toTopOf="@+id/Lat" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/Lon"/>
    <TextView
            android:text="@string/sampleLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lonVAL"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/Lon"/>
    <TextView
            android:text="23 December, 2021 02:30 PM"
            android:layout_width="395dp"
            android:layout_height="23dp" android:id="@+id/datetime"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/ViewWeather"
            app:layout_constraintBottom_toTopOf="@+id/Celcius" app:layout_constraintStart_toStartOf="@+id/ViewWeather"/>
    <TextView
            android:text="@string/thirtythree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Celcius"
            android:textSize="34sp"
            app:layout_constraintTop_toBottomOf="@+id/datetime"
            app:layout_constraintBottom_toTopOf="@+id/ardrota" app:layout_constraintStart_toStartOf="@+id/datetime"/>
    <TextView
            android:text="@string/label_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ardrota"
            app:layout_constraintTop_toBottomOf="@+id/Celcius"
            app:layout_constraintBottom_toTopOf="@+id/bayuchap" app:layout_constraintStart_toStartOf="@+id/Celcius"/>
    <TextView
            android:text="@string/label_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bayuchap"
            app:layout_constraintTop_toBottomOf="@+id/ardrota"
            app:layout_constraintBottom_toTopOf="@+id/dristishima" app:layout_constraintStart_toStartOf="@+id/ardrota"/>
    <TextView
            android:text="@string/label_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dristishima"
            app:layout_constraintTop_toBottomOf="@+id/bayuchap"
            app:layout_constraintBottom_toTopOf="@+id/surjodoy" app:layout_constraintStart_toStartOf="@+id/bayuchap"/>
    <TextView
            android:text="70%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pressure" android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="@+id/ardrota" app:layout_constraintStart_toEndOf="@+id/ardrota"/>
    <TextView
            android:text="1001 mBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/myVisibility" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/humidity" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/bayuchap"/>
    <TextView
            android:text="@string/_4_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/myVisibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dristishima"
            app:layout_constraintStart_toStartOf="@+id/pressure" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/description"
            app:layout_constraintTop_toTopOf="@+id/surjodoy" app:layout_constraintStart_toEndOf="@+id/surjodoy"
            app:layout_constraintEnd_toStartOf="@+id/surjoosto"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/surjodoy"
            android:text="@string/label_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/dristishima"
            app:layout_constraintBottom_toTopOf="@+id/iv_sunrise"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/surjoosto"
            android:text="@string/label_sunset"
            app:layout_constraintBottom_toTopOf="@+id/iv_sunset" android:layout_marginBottom="12dp"
            app:layout_constraintStart_toEndOf="@+id/surjodoy" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"/>
    <TextView
            android:text="@string/degree_celsius_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/Celcius" app:layout_constraintTop_toTopOf="@+id/Celcius"
            app:layout_constraintBottom_toBottomOf="@+id/Celcius" app:layout_constraintVertical_bias="0.0"
            android:textSize="24sp" android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/degree_fahrenheit_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView24"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/Farenhite_temp"
            app:layout_constraintBottom_toBottomOf="@+id/Farenhite_temp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="78"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Farenhite_temp"
            android:textSize="34sp"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintBottom_toBottomOf="@+id/Celcius" app:layout_constraintTop_toTopOf="@+id/Celcius"/>

</androidx.constraintlayout.widget.ConstraintLayout>